mkdocs_landing/css/style.css
html {
    scroll-behavior: smooth;
}

body {
    position: relative;
    margin: 0;
}


/** Layout **/

header#header, 
header#article-header,
#page {
    padding-top: 4rem;
    position: relative;
}

content#content {
    display: block;
    position: relative;
    padding-bottom: 4rem;
    max-width: 46rem;
    margin: 0 auto 0 auto;
    min-height: 100vh;
}

footer#footer {
    position: relative;
    text-align: right;
    padding: 2rem max(calc(50% - 24rem), 2rem);
    background-color: var(--footer);
    color: var(--footer-text);
}

#page-source {
    display: block;
    margin: 1em 0;
}

article {
    border: 1px solid var(--crust);
    border-radius: 1rem;
    padding: 1rem 2rem;
    margin-bottom: 2rem;
    margin-top: 1rem;
    margin-left: -1rem;
    background-color: var(--base)
}

#page-controls {
    display: grid;
    grid-template-columns: auto auto;
    width: 100%;
    margin-top: 4rem;
}

#return-home {
    grid-column-start: 1;
    justify-self: left;
}

#return-top {
    grid-column-start: 2;
    justify-self: right;
}

#background-gradient {
    position: fixed;
    top: 0; bottom: 0; left: 0; right: 0;
}


/** Header **/

header#header {
    display: grid;
    column-gap: 1rem;
    align-items: end;
}
header#header #title,
header#header #title a {
    font-size: 6rem;
}
header#article-header #title, 
header#article-header #title a {
    font-size: 3rem;
}

#title, #title a {
    grid-column-end: span 2;
    margin: 1rem 0;
    color: var(--text);
    line-height: 1em;
}
#tagline, #tagline a {
    grid-column-end: span 2;
    font-family: var(--heading);
    font-size: 1.5rem;
    color: var(--primary);
    margin: 0;
}
ul#socials {
    grid-column-end: span 2;
    display: grid;
    grid-template-columns: repeat(auto-fill, 1em);
    justify-content: left;
    grid-gap: .5em;
    font-size: 2rem;
    list-style-type: none;
    padding: 0;
    margin: 0;
}
ul#socials i {
    margin: inherit;
}
#avatar {
    object-fit: contain;
    margin: auto;
    min-width: 100%;
    border: none;
}


/** Table of contents **/

nav#toc {
    position: absolute;
    right: calc(100% + 5rem);
    text-align: right;
}
nav#toc ul {
    list-style-type: none;
}
nav#toc a {
    display: block;
    white-space: nowrap;
    margin: 0.5rem 0;
}
nav#toc + * {
    margin-top: 0;
}

nav#toc .toc-subitem a {
    color: var(--text);
    opacity: 35%;
}
nav#toc .toc-subitem {
    display: none;
}
nav#toc .toc-item:hover .toc-subitem {
    display: inline;
}


/** Headings **/

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: var(--heading);
    margin-bottom: 0.2rem;
    margin-top: 1em;
}
h1 {
    font-size: 2rem;
    margin-top: 2em;
}
h2 {
    font-size: 1.5rem;
}
h3 {
    font-size: 1.2rem;
}
h4 {
    font-size: 1rem;
}
h5 {
    font-size: 1rem;
}
h6 {
    font-size: 1rem;
}


/** Typography **/

a {
    color: var(--secondary);
    text-decoration: none;
}
a:hover {
    color: var(--tertiary);
}

i {
    margin: auto 0.2em;
}

pre, code, blockquote {
    font-family: var(--mono);
    background-color: var(--mantle);
}

p {
    margin-top: 0.5rem;
    margin-bottom: 1rem;
}

i.color-preview {
    display: inline;
    text-shadow: 
        -2px +0px 0 var(--mantle), 
        +0px +2px 0 var(--mantle), 
        +2px +0px 0 var(--mantle), 
        +0px -2px 0 var(--mantle);
        margin: 2px .4em;
}

/** Block elements **/

img {
    max-width: calc(100% - 2rem);
    box-shadow: 0 0 1rem var(--shadow);
    border-radius: 1rem;
    margin: 1rem;
    border: 2px solid var(--overlay);
}

blockquote {
    margin: 0;
    padding: 1rem;
}
blockquote + ul {
    margin-top: 0.5rem;
    text-align: right;
    list-style-type: none;
}

pre {
    padding: 1rem;
    overflow-x: auto;
}

table {
    border-collapse: collapse;
    margin: 1rem 8px;
}

thead {
    position: relative;
    background-color: var(--primary);
    color: var(--primary-text);
}

thead:before,
thead:after {
    content: " ";
    background-color: var(--primary);
    display: block;
    position: absolute;
    top: 0;
    bottom: 0;
    width: 8px;
}

thead:before {
    right: 100%;
    border-bottom-left-radius: 8px;
    border-top-left-radius: 8px;
}

thead:after {
    left: 100%;
    border-bottom-right-radius: 8px;
    border-top-right-radius: 8px;
}

tbody tr {
    border-bottom: 1px solid var(--overlay);
}

th, td {
    padding: 1rem;
}


iframe {
    width: calc(100% + 2rem);
    height: 30rem;
    margin: 1rem -1rem;
    border: 2px solid var(--overlay);
    border-radius: 1rem;
    
}
iframe.zoomed-out {
    zoom: 0.5;
    height: 60rem;
    border-width: 4px;
}

.altmetric-citation {
    display: grid;
    grid-auto-flow: column;
    align-items: center;
    grid-gap: 1rem;
    margin: 1rem 0;
}
.altmetric-embed img {
    margin: 1rem;
    box-shadow: none;
}

